@@ -58,15 +58,20 @@ void DropIndex(std::string const& db, std::string const& col,
 void CreateView(std::string const& db, std::string const& name, int result);
 void DropView(std::string const& db, std::string const& name, int result);
 void CreateDocument(std::string const& db, std::string const& collection,
-                    VPackSlice const& document, OperationOptions const& options, int);
+                    VPackSlice const& document, OperationOptions const& options,
+                    int, GeneralRequest const*);
 void DeleteDocument(std::string const& db, std::string const& collection,
-                    VPackSlice const& document, OperationOptions const& options, int);
+                    VPackSlice const& document, OperationOptions const& options,
+                    int, GeneralRequest const*);
 void ReadDocument(std::string const& db, std::string const& collection,
-                  VPackSlice const& document, OperationOptions const& options, int);
+                  VPackSlice const& document, OperationOptions const& options,
+                  int, GeneralRequest const*);
 void ReplaceDocument(std::string const& db, std::string const& collection,
-                     VPackSlice const& document, OperationOptions const& options, int);
+                     VPackSlice const& document, OperationOptions const& options,
+                     int, GeneralRequest const*);
 void ModifyDocument(std::string const& db, std::string const& collection,
-                    VPackSlice const& document, OperationOptions const& options, int);
+                    VPackSlice const& document, OperationOptions const& options,
+                    int, GeneralRequest const*);
 void IllegalDocumentOperation(GeneralRequest const&, int result);
 void QueryDocument(std::string const& db, std::string const&, std::string const&, int code);
 void QueryDocument(std::string const& db, VPackSlice const&, int code);
